<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CS:GO Stats</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_match">Fill Match Details</string>
    <string name="choose_map">Map:</string>
    <string name="enter_kills">Kills:</string>
    <string name="enter_deaths">Deaths:</string>
    <string name="enter_ct_rounds">CT Rounds:</string>
    <string name="enter_t_rounds">T Rounds:</string>
    <string name="submit">Submit</string>
    <string name="action_match">Add Match</string>
    <string name="kdr_text">KDR</string>
    <string name="ct_avg_text">CT Avg</string>
    <string name="t_avg_text">T Avg</string>
    <string name="title_activity_match_dates">Match History</string>
    <string name="date_select_info">Click a date to see the stats of that match</string>
    <string name="title_activity_match_stats">Match Stats</string>
    <string name="ct_rounds_text">CT Rounds</string>
    <string name="t_rounds_text">T Rounds</string>

</resources>
