<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.carthage.andrejko.matt.csgostats.AddMatch"
    android:orientation="vertical"
    android:background="@color/button_material_dark">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mapLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/choose_map"
            android:id="@+id/mapText"
            android:textColor="@color/primary_text_default_material_dark" />

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/mapSpinner"
            android:layout_weight="1"
            android:layout_marginLeft="5dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/killsLayout"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/enter_kills"
            android:id="@+id/killsText"
            android:textColor="@color/primary_text_default_material_dark" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="3"
            android:id="@+id/killsAmt"
            android:layout_marginLeft="70dp"
            android:textColor="@color/primary_text_default_material_dark" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/deathsLayout"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/enter_deaths"
            android:id="@+id/deathsText"
            android:textColor="@color/primary_text_default_material_dark" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="3"
            android:id="@+id/deathsAmt"
            android:layout_marginLeft="43dp"
            android:textColor="@color/primary_text_default_material_dark" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ctRoundsLayout"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/enter_ct_rounds"
            android:id="@+id/ctText"
            android:textColor="@color/primary_text_default_material_dark" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="3"
            android:id="@+id/ctRoundsAmt"
            android:layout_marginLeft="5dp"
            android:textColor="@color/primary_text_default_material_dark" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tRoundsLayout"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/enter_t_rounds"
            android:id="@+id/tText"
            android:textColor="@color/primary_text_default_material_dark" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="3"
            android:id="@+id/tRoundsAmt"
            android:layout_marginLeft="20dp"
            android:textColor="@color/primary_text_default_material_dark" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/submitButton"
        android:layout_marginTop="5dp"
        android:background="@color/primary_text_default_material_dark"
        android:onClick="onClick" />

</LinearLayout>
